--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -198,6 +198,24 @@
   primaryClass = {cs}
 }
 
+@article{carpenter2017stan,
+  title = {Stan: {{A Probabilistic Programming Language}}},
+  shorttitle = {Stan},
+  author = {Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D. and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  date = {2017-01-11},
+  journaltitle = {Journal of Statistical Software},
+  volume = {76},
+  pages = {1--32},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v076.i01},
+  url = {https://www.jstatsoft.org/index.php/jss/article/view/v076i01},
+  urldate = {2020-10-19},
+  file = {/home/philipp/Zotero/storage/FJWL68HU/Carpenter et al_2017_Stan.pdf},
+  issue = {1},
+  langid = {english},
+  number = {1}
+}
+
 @report{cohen2016automatic,
   title = {Automatic {{Reverse}}-{{Mode Differentiation}}: {{Lecture Notes}}},
   author = {Cohen, William W},
@@ -1118,6 +1136,31 @@
   type = {Dissertation}
 }
 
+@article{salvatier2016probabilistic,
+  title = {Probabilistic Programming in {{Python}} Using {{PyMC3}}},
+  author = {Salvatier, John and Wiecki, Thomas V. and Fonnesbeck, Christopher},
+  date = {2016-04-06},
+  journaltitle = {PeerJ Computer Science},
+  shortjournal = {PeerJ Comput. Sci.},
+  volume = {2},
+  pages = {e55},
+  publisher = {{PeerJ Inc.}},
+  issn = {2376-5992},
+  doi = {10.7717/peerj-cs.55},
+  url = {https://peerj.com/articles/cs-55},
+  urldate = {2020-10-19},
+  abstract = {Probabilistic programming allows for automatic Bayesian inference on user-defined probabilistic models. Recent advances in Markov chain Monte Carlo (MCMC) sampling allow inference on increasingly complex models. This class of MCMC, known as Hamiltonian Monte Carlo, requires gradient information which is often not readily available. PyMC3 is a new open source probabilistic programming framework written in Python that uses Theano to compute gradients via automatic differentiation as well as compile probabilistic programs on-the-fly to C for increased speed. Contrary to other probabilistic programming languages, PyMC3 allows model specification directly in Python code. The lack of a domain specific language allows for great flexibility and direct interaction with the model. This paper is a tutorial-style introduction to this software package.},
+  file = {/home/philipp/Zotero/storage/GGZ44LJI/Salvatier et al_2016_Probabilistic programming in Python using PyMC3.pdf;/home/philipp/Zotero/storage/A7THD2DL/cs-55.html},
+  langid = {english}
+}
+
+@online{scherrer2019soss,
+  title = {Soss.Jl},
+  author = {Scherrer, Chad},
+  date = {2019},
+  url = {https://github.com/cscherrer/Soss.jl}
+}
+
 @online{schulman2016gradient,
   title = {Gradient {{Estimation Using Stochastic Computation Graphs}}},
   author = {Schulman, John and Heess, Nicolas and Weber, Theophane and Abbeel, Pieter},
@@ -1187,6 +1230,15 @@
   url = {http://dl.acm.org/citation.cfm?id=3104482.3104499},
   file = {/home/philipp/Zotero/storage/ILEZFBC9/Socher et al_2011_Parsing natural scenes and natural language with recursive neural networks.pdf},
   series = {{{ICML}}'11}
+}
+
+@online{standevelopmentteam2018stan,
+  title = {Stan {{Modeling Language Users Guide}} and {{Reference Manual}}, {{Version}} 2.18.0.},
+  author = {{Stan Development Team}},
+  date = {2018},
+  url = {//mc-stan.org/},
+  urldate = {2020-10-19},
+  langid = {english}
 }
 
 @book{static,
