--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -231,6 +231,7 @@
 \newcommand{\turingjl}{\juliapackage{Turing.jl}}
 \newcommand{\irtrackerjl}{\juliapackage{IRTracker.jl}}
 \newcommand{\autogibbsjl}{\juliapackage{AutoGibbs.jl}}
+\newcommand{\dppljl}{\juliapackage{DynamicPPL.jl}}
 
 
 %-------------------------------------------------------------------------------
