--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -11,7 +11,7 @@
 \usepackage[textsize=tiny]{todonotes}
 \usepackage[final]{hyperref}
 
-% \usepackage{placeins}           % \FloatBarrier
+\usepackage[section]{placeins}           % \FloatBarrier
 %\usepackage{float}             % H float placement
 % \usepackage[originalcommands]{ragged2e} % improved ragged paragraphs in abstract
 \usepackage{eso-pic}
@@ -26,7 +26,7 @@
 
 % \usepackage[final]{mylistings}
 \usepackage[final]{listings}
-\usepackage[charsperline=94]{jlcode}
+\usepackage[charsperline=94, usebox=false]{jlcode}
 
 \title{Automatic Graph Tracking in Probabilistic Programs via Source Transformations}
 
